--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 
 .big-container .img h1 {
     color:white;
-    background-color:rgba(0,0,0,0.5);
-    padding:20px;
+    background-color:rgba(0,0,0,0.4);
+    padding:50px;
     width:100%;
     text-align: center;
     font-family:'Courier New', Courier, monospace;
@@ -31,7 +31,7 @@ body {
     background:url('https://images.pexels.com/photos/1064162/pexels-photo-1064162.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat;
     background-size:cover;
     height:100vh;
-    width:50%;
+    width:60%;
     object-fit: cover;
     display:flex;
     align-items:center;
@@ -57,7 +57,7 @@ body {
     padding:50px;
     margin: 20px 0;
     text-transform:uppercase;
-    background: linear-gradient(45deg,#ccffb3,green);
+    background: beige;
     height:300px;
 }
 
@@ -66,15 +66,16 @@ input {
     border-radius: 5px;
     height:30px;
     width:200px;
-    border:1px solid #000;
+    border:none;
+    color:gray;
 }
 
 label {
-    color:#fff;
+    color:black;
 }
 
 button {
-    background: linear-gradient(75deg,#ccffb3,green);
+    background: green;
     color:#fff;
     padding:10px 40px;
     border:none;
